--- a/reference/meta_design_mechanical.ipynb
+++ b/reference/meta_design_mechanical.ipynb
@@ -657,7 +657,8 @@
     "grid_spec = gridspec.GridSpec(2, 6, )\n",
     "ax1 = [plt.subplot(grid_spec[0, 0]), plt.subplot(grid_spec[0, 1]), plt.subplot(grid_spec[0, 2]), plt.subplot(grid_spec[0, 3]), plt.subplot(grid_spec[0, 4]), plt.subplot(grid_spec[0, 5])]\n",
     "\n",
-    "ax2 = plt.subplot(grid_spec[1, :])  # This plot spans across both columns"
+    "ax2 = plt.subplot(grid_spec[1, :])  # This plot spans across both columns\n",
+    "    "
    ]
   },
   {
