--- a/data/physical_tests/homogeneous_foams/analysis.ipynb
+++ b/data/physical_tests/homogeneous_foams/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
     "        \n",
     "        \n",
     "    # linear fit using strain up to 2% (arbitrary limit) using numpy\n",
-    "    strain_bounds = (0., 1.)\n",
+    "    strain_bounds = (0., 1)\n",
     "    mask = (df['Compressive strain (Displacement) (%)'] >= strain_bounds[0]) & (df['Compressive strain (Displacement) (%)'] <= strain_bounds[1])\n",
     "    coeffs = np.polyfit(df['Compressive strain (Displacement) (%)'][mask], df['Compressive stress (kPa)'][mask], 1)\n",
     "    print(coeffs)\n",
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "(0.00036485118082671923, 100.0)"
       ]
      },
-     "execution_count": 245,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
