Remove hats from E

--- a/analysis/fig4.ipynb
+++ b/analysis/fig4.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -88,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +152,7 @@
        " (0.33725490196078434, 0.7058823529411765, 0.9137254901960784)]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,9 +207,9 @@
     ")\n",
     "# actual text we want as axes labels\n",
     "xy_labs = (\n",
-    "    (r'$\\hat{E}_1$', r'$\\hat{E}_2$'),\n",
-    "    (r'$\\hat{E}_2$', r'$\\nu_{21}$'),\n",
-    "    (r'$\\hat{E}_2$', r'$\\eta_{212}$'),\n",
+    "    (r'$E_1$', r'$E_2$'),\n",
+    "    (r'$E_2$', r'$\\nu_{21}$'),\n",
+    "    (r'$E_2$', r'$\\eta_{212}$'),\n",
     "    (r'$\\hat{\\lambda}_1$', r'$\\hat{\\lambda}_2$')\n",
     ")\n",
     "\n",
