--- a/data/instron_tests/analysis.ipynb
+++ b/data/instron_tests/analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "from instron_processing import ureg, Q_\n",
-    "import instron_processing.instron_processing as ip\n",
+    "import instron_processing as ip\n",
     "import pint\n",
     "import pint_pandas\n",
     "\n",
@@ -40,22 +40,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'instron_processing' has no attribute 'load_samples'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 4\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Load Data\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28mdir\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./homogeneous_foams\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m----> 4\u001b[0m dfs_dense, metadata_dense \u001b[38;5;241m=\u001b[39m \u001b[43mip\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mload_samples\u001b[49m(\u001b[38;5;28mdir\u001b[39m,\n\u001b[1;32m      5\u001b[0m                                             filter_fn\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m f: (\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mdense\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m f\u001b[38;5;241m.\u001b[39mstem\u001b[38;5;241m.\u001b[39mlower())))\n\u001b[1;32m      7\u001b[0m dfs_sparse, metadata_sparse \u001b[38;5;241m=\u001b[39m ip\u001b[38;5;241m.\u001b[39mload_samples(\u001b[38;5;28mdir\u001b[39m,\n\u001b[1;32m      8\u001b[0m                                               filter_fn\u001b[38;5;241m=\u001b[39m(\u001b[38;5;28;01mlambda\u001b[39;00m f: \u001b[38;5;124m'\u001b[39m\u001b[38;5;124msparse\u001b[39m\u001b[38;5;124m'\u001b[39m \u001b[38;5;129;01min\u001b[39;00m f\u001b[38;5;241m.\u001b[39mstem\u001b[38;5;241m.\u001b[39mlower()))\n\u001b[1;32m     10\u001b[0m dfs_combo \u001b[38;5;241m=\u001b[39m [dfs_dense, dfs_sparse]\n",
+      "\u001b[0;31mAttributeError\u001b[0m: module 'instron_processing' has no attribute 'load_samples'"
+     ]
+    }
+   ],
    "source": [
     "# Load Data\n",
     "dir = './homogeneous_foams'\n",
-    "strain_limits = (0, 0.05)\n",
     "\n",
     "dfs_dense, metadata_dense = ip.load_samples(dir,\n",
-    "                                            # strain_threshold=0.01,\n",
-    "                                            fit_strain_limits=strain_limits,\n",
     "                                            filter_fn=(lambda f: ('dense' in f.stem.lower())))\n",
     "\n",
     "dfs_sparse, metadata_sparse = ip.load_samples(dir,\n",
-    "                                            #   strain_threshold=0.01,\n",
-    "                                              fit_strain_limits=strain_limits,\n",
     "                                              filter_fn=(lambda f: 'sparse' in f.stem.lower()))\n",
     "\n",
     "dfs_combo = [dfs_dense, dfs_sparse]\n",
