Prep for paper release

--- a/figure_creation/fig4.ipynb
+++ b/figure_creation/fig4.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,7 +44,7 @@
     "import matplotlib as mpl\n",
     "from incense import ExperimentLoader\n",
     "import seaborn as sns\n",
-    "from dashboard.utils.mechanics import isotropic_elasticity_matrix, calculate_elastic_properties\n",
+    "from metatop.mechanics import isotropic_elasticity_matrix, calculate_elastic_constants\n",
     "import pandas as pd\n",
     "\n",
     "plt.rcParams['figure.dpi'] = 300\n",
@@ -151,8 +151,8 @@
     "# Add homogenous datapoints manually\n",
     "C_high = isotropic_elasticity_matrix(1., 0.4, output_style='mandel')\n",
     "C_low = isotropic_elasticity_matrix(1/30, 0.4, output_style='mandel')\n",
-    "mat_prop_high = calculate_elastic_properties(C_high, input_style='mandel')\n",
-    "mat_prop_low = calculate_elastic_properties(C_low, input_style='mandel')\n",
+    "mat_prop_high = calculate_elastic_constants(C_high, input_style='mandel')\n",
+    "mat_prop_low = calculate_elastic_constants(C_low, input_style='mandel')\n",
     "eigv_high = np.linalg.eigvalsh(C_high)\n",
     "eigv_low = np.linalg.eigvalsh(C_low)\n",
     "print(eigv_high/np.max(eigv_high))\n",
